styles/buttons.less
@import "variables";
@import "mixins";

// Button reset
.btn,
.btn-toolbar,
.btn-feedback {
	#berend-mixin-button-reset;
}

// Large button
.btn.btn-large {
	padding-top: 0;
	padding-bottom: 0;
	font-size: @berend-font-size-small;
	line-height: @berend-button-height;
}

// Textual buttons
.btn-text {
	#berend-mixin-text-button;
}

// Toolbar buttons
.btn-toolbar {
	#berend-mixin-icon-button;
	#berend-mixin-clear-text-button; // For "Clear selection" button
	border: solid transparent !important;
	border-width: 1px 0 !important;
	background-clip: padding-box !important;
	padding-top: 0;
	padding-bottom: 0;
	margin-left: 0 !important; //@berend-padding-small !important;
	font-size: @berend-font-size-medium;
	.sheet-toolbar & {
		margin-top: @berend-toolbar-padding !important;
	}
	&.mode-toggle.mode-false .content-mask {
		background-color: @berend-dark-grey;
	}
}

// Floating toolbar (bold, italic etc.)
.floating-toolbar .btn {
	height: 20px !important;
	padding: 0 !important;
}

// Toolbar up/down arrow
.message-toolbar-arrow {
	padding-top: 0 !important;
	display: flex;
	cursor: pointer;
	img {
		background-color: @berend-medium-grey !important;
		transition: background-color @berend-transition-time;
		margin: auto;
		cursor: pointer;
	}
	&:hover img {
		background-color: @berend-dark-grey !important;
	}
	&.down {
		margin-left: @berend-padding-small;
	}
	&.up {
		margin-right: @berend-padding-small;
	}
	&.disabled {
		cursor: default;
		img {
			background-color: @berend-medium-grey !important;
			cursor: default;
		}
		&:hover img {
			background-color: @berend-medium-grey !important;
		}
	}
	body.platform-win32 &:hover {
		background: none !important;
	}
}

// Toolbar folder/label button
.sheet-toolbar .category-picker {
	margin-left: 0 !important;
}

// Toolbar compose button
.btn.item-compose {
	#berend-mixin-button-green;
	margin-right: -1px !important;
	img {
		display: none;
	}
	&:before {
		content: "Compose";
	}
	// On Windows, Linux
	body.platform-win32 &,
	body.platform-linux & {
		width: ~"calc( 100% - " ( @berend-padding-small * 2 ) ~" )";
		margin-right: @berend-padding-small !important;
		margin-left: @berend-padding-small !important;
	}
}

// Feedback button
.btn-feedback {
	#berend-mixin-button-blue;
	right: auto !important;
	bottom: @berend-padding-small !important;
	left: @berend-padding-small;
	width: @berend-sidebar-width - @berend-padding-small - @berend-padding-small !important;
	font-size: 0 !important;
	&:before {
		content: "Help & Feedback";
	}
	// In a message thread
	#Thread & {
		display: none;
	}
}

// Send button regular
.btn-emphasis {
	#berend-mixin-button-green;
	width: 20%;
	padding-left: @berend-text-button-padding - 5px !important;
	margin: 0 @berend-padding-small 0 0 !important;
}
// Send button dropdown
.btn-send {
	#berend-mixin-button-reset;
	#berend-mixin-button-green;
	width: 20%;
	padding-left: @berend-text-button-padding - 5px !important;
	margin: 0 @berend-padding-small 0 0 !important;

	// Left side
	.primary-item {
		border: 0 !important;
		padding: 0 !important;
		line-height: inherit !important;
		background: none !important;
		cursor: pointer !important;
		> span {
			vertical-align: middle;
		}
	}

	// Arrow
	.secondary-picker {
		line-height: @berend-button-height;
		float: right;
		right: -@berend-text-button-padding;
		height: @berend-button-height !important;
		border: 0 !important;
		border-left: 1px solid rgba( 255, 255, 255, 0.25 ) !important;
		background: none !important;
		padding: 0 @berend-padding-small !important;
	}

	// Icon
	img.content-mask {
		transition: opacity @berend-transition-time !important;
	}
	> *:hover img.content-mask {
		background: white !important;
	}

}

// Message print icon
#message-list .message-icons-wrap > * {
	#berend-mixin-button-reset;
	#berend-mixin-icon-button;
	margin-left: 0 !important;
	&:empty {
		display: none;
	}
}

// Preferences
.preferences-wrap {

	.btn:not(.template-name-btn),
	.container-templates .section-title .template-name-btn {
		#berend-mixin-button-blue;
	}
	.actions .btn,
	.appearance-mode-switch .btn {
		#berend-mixin-button-green;
	}

	// Sidebar menu
	.preferences-sidebar {
		.item {
			transition: background-color @berend-transition-time;
			padding-left: 0;
			.disclosure-triangle {
				padding-left: 2px;
				width: @berend-padding-small;
			}
			.name {
				transition: color @berend-transition-time;
			}
			&.active:not(.has-subitems) {
				background-color: white;
				border-right: 0;
				.name {
					color: @berend-text-color-dark;
				}
			}
			.subitems {
				background: none;
				box-shadow: none;
				.subitem {
					padding-left: @berend-padding-medium;
				}
			}
		}
		.item.active .subitem {
			transition: background-color @berend-transition-time, color @berend-transition-time;
			&.active {
				color: @berend-text-color-dark;
				background-color: white;
				border-right: 0;
			}
		}
	}

	// Appearance option buttons
	.appearance-mode-switch .appearance-mode {
		border-radius: @berend-border-radius;
		border-color: @berend-border-light;
		color: @berend-text-color-ui;
		transition: border-color @berend-transition-time, color @berend-transition-time;
		img {
			background-color: @berend-border-medium;
			transition: background-color @berend-transition-time;
		}
		&.active {
			border-color: @berend-border-dark;
			color: @berend-text-color-dark;
			img {
				background-color: @berend-ui-grey;
			}
		}
	}

	// Toggle signature HTML
	.toggle-mode a {
		#berend-mixin-button-reset;
		#berend-mixin-button-blue;
	}

	// Process all mail rules button
	.container-mail-rules .btn {
		#berend-mixin-button-green;
	}
	.container-mail-rules .rule-detail .well .well-row .actions .btn {
		#berend-mixin-button-blue;
		width: auto;
	}

}

// Apply changes button
.btn.btn-small {
	#berend-mixin-button-green;
}

